[gd_scene load_steps=3 format=3]

[ext_resource type="PackedScene" uid="uid://c5p6p6p6p6p6" path="res://Scenes/Game.tscn" id="2_game"]
[ext_resource type="Script" path="res://Scripts/UI/MainMenu.gd" id="1_script"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="BackgroundViewport" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="BackgroundViewport"]
handle_input_locally = false
size = Vector2(1152, 648)
render_target_update_mode = 4

[node name="GamePreview" parent="BackgroundViewport/SubViewport" instance=ExtResource("2_game")]

[node name="TintLayer" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.4)

[node name="MenuContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="MenuContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Cyber Noir"
horizontal_alignment = 1

[node name="NewGameBtn" type="Button" parent="MenuContainer"]
layout_mode = 2
text = "New Game"

[node name="SettingsBtn" type="Button" parent="MenuContainer"]
layout_mode = 2
text = "Add API Key"

[node name="ExitBtn" type="Button" parent="MenuContainer"]
layout_mode = 2
text = "Exit"

[node name="SetupPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SetupPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="SetupPanel/VBoxContainer"]
layout_mode = 2
text = "Setup API Key"
horizontal_alignment = 1

[node name="InfoLabel" type="Label" parent="SetupPanel/VBoxContainer"]
layout_mode = 2
text = "Enter your Google Gemini API Key to continue."
autowrap_mode = 2

[node name="APIKeyInput" type="LineEdit" parent="SetupPanel/VBoxContainer"]
layout_mode = 2
placeholder_text = "Paste API Key Here..."
secret = true

[node name="StatusLabel" type="Label" parent="SetupPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.4, 0.4, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="SetupPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="SaveBtn" type="Button" parent="SetupPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Save Key"

[node name="CloseBtn" type="Button" parent="SetupPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Cancel"

[connection signal="pressed" from="MenuContainer/NewGameBtn" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="MenuContainer/SettingsBtn" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MenuContainer/ExitBtn" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="SetupPanel/VBoxContainer/HBoxContainer/SaveBtn" to="." method="_on_save_settings_pressed"]
[connection signal="pressed" from="SetupPanel/VBoxContainer/HBoxContainer/CloseBtn" to="." method="_on_close_settings_pressed"]
